--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
         Você disse: <span class="box"> 20 </span>
         <div>O número secreto é maior <i class="fa-solid fa-up-long"> </i></div>
     </div>
+    <script src="app/sortearNumero.js"></script>
 </body>
 </html>
