--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-r">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,5 +18,6 @@
         <div>O número secreto é maior <i class="fa-solid fa-up-long"> </i></div>
     </div>
     <script src="app/sortearNumero.js"></script>
+    <script src="app/reconhecimentoVoz.js"></script>
 </body>
 </html>
